--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,44 +1,34 @@
-Package: pkgdoc
-Title: Reference Documented R Objects Across Multiple Packages
-Version: 0.0.0.9000
+Package: dverse
+Title: Document a Universe of Packages
+Version: 0.0.0.9004
 Authors@R: 
-    person(given = "Mauro",
-           family = "Lepore",
-           role = c("aut", "ctr", "cre"),
-           email = "leporem@si.edu")
-Description: Reference documented R objects across multiple
-    packages.
-License: GPL-3
-URL: https://github.com/maurolepore/pkgdoc
-BugReports: https://github.com/maurolepore/pkgdoc/issues
+    person("Mauro", "Lepore", , "maurolepore@gmail.com", role = c("aut", "ctr", "cre"))
+Description: Creates a data frame of the metadata associated to the
+    documentation of a collection of R packages. If you maintain universe
+    meta-package, it helps you to easily create a universal reference for
+    its website.
+License: MIT + file LICENSE
+URL: https://github.com/maurolepore/dverse,
+    https://maurolepore.github.io/dverse/
+BugReports: https://github.com/maurolepore/dverse/issues
 Depends: 
     R (>= 3.1)
 Imports: 
-    dplyr (>= 0.7.8),
-    glue (>= 1.3.0),
-    magrittr (>= 1.5),
-    purrr (>= 0.3.0),
-    rlang (>= 0.3.1),
-    tibble (>= 2.0.1),
+    cli,
+    dplyr,
+    glue,
+    rlang,
+    tibble,
     utils
 Suggests: 
-    covr (>= 3.2.1),
-    DT (>= 0.5),
-    fgeo (>= 1.1.1),
-    fgeo.analyze (>= 1.1.4),
-    fgeo.x (>= 1.1.2),
-    formulize (>= 0.1.0.9000),
-    kableExtra (>= 1.0.1),
-    knitr (>= 1.21),
-    projmgr (>= 0.0.0.9900),
-    rmarkdown (>= 1.11),
-    spelling (>= 2.0),
-    testthat (>= 2.0.1)
-Remotes: 
-    maurolepore/formulize,
-    maurolepore/projmgr
+    DT,
+    knitr,
+    testthat,
+    withr
+Config/Needs/website: rmarkdown
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.3.2
