--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -21,6 +21,8 @@ navbar:
       menu:
         - text: "Get started"
           href: articles/start.html
+        - text: "Meta package"
+          href: articles/meta.html
     news:
       text: "Changelog"
       href: news/index.html
