The website now uses auto mode

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,6 +2,9 @@ url: https://maurolepore.github.io/dverse/
 template:
   bootstrap: 5
 
+development:
+  mode: auto
+
 authors:
   Mauro Lepore:
     href: https://github.com/maurolepore
