--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,18 +1,20 @@
+^CODE_OF_CONDUCT\.md$
+^CRAN-SUBMISSION$
 ^LICENSE\.md$
-^codecov\.yml$
-^vignettes/siteonly$
-^docs$
-^_pkgdown\.yml$
 ^README\.Rmd$
-^\.travis\.yml$
-^dverse\.Rproj$
 ^\.Rproj\.user$
 ^\.github$
-^CODE_OF_CONDUCT\.md$
-^vignettes/articles$
-^pkgdown$
-^dverse\.Rproj$
-^dverse\.Rproj$
+^\.pre-commit-config\.yaml$
+^\.travis\.yml$
+^_pkgdown\.yml$
+^codecov\.yml$
+^codemeta\.json$
 ^cran-comments\.md$
-^CRAN-SUBMISSION$
+^docs$
+^dverse\.Rproj$
+^dverse\.Rproj$
+^dverse\.Rproj$
+^pkgdown$
 ^revdep$
+^vignettes/articles$
+^vignettes/siteonly$
